--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     margin:auto;
     overflow:hidden;
 }
+
 ul{
     margin:0;
     padding:0;}
@@ -35,4 +36,9 @@ header #branding h1{
 header nav {
     float:right;
     margin-top:20px;
+}
+p {
+    font:15px/1.5 Arial, Helvetica,sans-serif;
+    margin-left:150px;
+    margin-top:80px;
 }
