--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header li{
     padding: 0 20px 0 20px;
 }
 header #branding{
-    float:left;
+    float:left
 }
 header #branding h1{
     margin:0;
