--- a/main.css
+++ b/main.css
@@ -1,1 +1,19 @@
+body{
+    font: 15px/1.5 Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;    
+}
 
+#boxes{
+    margin-top:10%;
+    margin-left: 48%;
+}
+#boxes .instagram{
+    float:left;
+    width: 5%;
+}
+
+#boxes .instagram i{
+    width: 300px;
+    height: 30px;
+}
